Fix night reports link not showing in historical
Also improve group braces in startracker views

--- a/src/rubintv/static/stylesheets/main.sass
+++ b/src/rubintv/static/stylesheets/main.sass
@@ -308,7 +308,7 @@ section
 	.grid-title
 		position: static
 	.table-spacer
-		height: 10em
+		height: 11em
 	.meta-group
 		top: -5.4em
 
